--- a/boat-tracker/index.html
+++ b/boat-tracker/index.html
@@ -57,7 +57,7 @@
         }
       };
 
-      fetch('../../assets/boats.json')
+      fetch('boats.json')
         .then(response => response.json())
         .then(result => result.result)
         .then(result => {
