--- a/boat-tracker/index.html
+++ b/boat-tracker/index.html
@@ -18,7 +18,7 @@
 
     <script>
   const options = {
-    key: 'PsLAtXpsPTZexBwUkO7Mx5I',
+    key: 'UorH6iWekY9Iwiwp0KcBqqWVJRjQqLVz',
     lat: 14,
     lon: -29,
     zoom: 4
